fixes on pre-wrap & scroll to top

--- a/comment/static/css/style.css
+++ b/comment/static/css/style.css
@@ -863,6 +863,10 @@ video {
   overflow-y: auto;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
